--- a/src/styles/register.module.scss
+++ b/src/styles/register.module.scss
@@ -1,11 +1,10 @@
-/* styles/register.module.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100%;
-  background: linear-gradient(to right, #041643, #1c2c4c);
+  background: #F5F7FA;
 }
 
 .formWrapper {
@@ -24,7 +23,7 @@
 .title {
   font-size: 28px;
   font-weight: bold;
-  color: #041643;
+  color: #1F2937;
   margin-bottom: 5px; 
 }
 
@@ -36,22 +35,32 @@
 
 .inputGroup {
   display: flex;
+  align-items: center;
   flex-direction: column;
   width: 100%;
 }
 
 .input {
-  width: 95%;  /* Reduz a largura dos inputs para 80% */
-  margin: 0 auto; /* Centraliza os inputs */
-  padding: 10px; /* Ajusta o espaçamento interno */
-  border: 1px solid #ccc;
+  width: 95%;  
+  margin: 0 auto; 
+  padding: 10px; 
+  border: 1px solid #E5E7EB;
   border-radius: 5px;
   font-size: 16px;
+  text-align: center;
 }
 
 .input:focus {
-  border-color: #041643;
+  border-color: #E5E7EB;
   outline: none;
+}
+
+.inputError {
+  border-color: red!important;
+
+  &::placeholder {
+    color: red; 
+  }
 }
 
 .submitButton,
@@ -67,32 +76,32 @@
 }
 
 .submitButton {
-  background-color: #041643;
+  background-color: #4F46E5;
   color: white;
 }
 
 .submitButton:hover {
-  background-color: #062266;
+  background-color: #4338CA;
 }
 
 .googleButton {
-  background-color: white;
-  color: black;
-  border: 1px solid #ccc;
+  background-color: #4F46E5;
+  color: rgb(255, 255, 255);
+  border: 1px solid #E5E7EB;
 }
 
 .googleButton:hover {
-  background-color: #f7f7f7;
+  background-color: #4338CA;
 }
 
 .loginPrompt {
   margin-top: 5px;
   font-size: 14px;
-  color: black;
+  color: #1F2937;
 }
 
 .loginLink {
-  color: #041643;
+  color: #4F46E5;
   text-decoration: none;
   font-weight: bold;
 }
