--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -1,14 +1,12 @@
-// Fundo com gradiente azul escuro (#041643)
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient(to right, #041643, #1c2c4c);
+    background: #F5F7FA;
   }
   
-  // Estilo do card de login
   .formWrapper {
     width: 100%;
     max-width: 400px;
@@ -22,11 +20,10 @@
     gap: 20px; 
   }
   
-  // Título
   .title {
     font-size: 28px;
     font-weight: bold;
-    color: #041643;
+    color: #1F2937;
     margin-bottom: 20px;
   }
 
@@ -36,7 +33,6 @@
     gap: 20px; 
   }
   
-  // Grupo de inputs (label + campo)
   .inputGroup {
     display: flex;
     flex-direction: column;
@@ -45,17 +41,23 @@
     margin-bottom: 15px;
   }
   
-  // Inputs estilizados
   .input {
-    width: 95%;  // Ajustado para 80% para centralizar
+    width: 95%; 
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #E5E7EB;
     border-radius: 5px;
     font-size: 16px;
     text-align: center;
   }
   
-  // Botão de login
+  .inputError {
+    border-color: red!important;
+
+    &::placeholder {
+      color: red;
+    }
+  }
+
   .submitButton,
   .googleButton {
     width: 100%;
@@ -69,39 +71,37 @@
 }
 
   .submitButton {
-    background-color: #041643;
+    background-color: #4F46E5;
     color: white;
   }
   
   .submitButton:hover {
-    background-color: #062266;
+    background-color: #4338CA;
   }
   
   .googleButton {
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
+    background-color: #4F46E5;
+    color: #FFFFFF;
+    border: 1px solid #E5E7EB;
   }
   
   .googleButton:hover {
-    background-color: #f7f7f7;
+    background-color: #4338CA;
   }
   
-  // Mensagem de erro
   .error {
     color: red;
     font-size: 14px;
     margin-bottom: 10px;
   }
   
-  // Link para registro
   .registerPrompt {
     margin-top: 15px;
     font-size: 14px;
   }
   
   .registerLink {
-    color: #041643;
+    color: #4F46E5;
     font-weight: bold;
     text-decoration: none;
   
